Ensure icons are in public folder

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     
-    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192_v2.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>React App</title>
   </head>
